Played more with hamburger navigation - is currently extending off screen at certain width and coming on screen when small. Otherwise have made nav bar flex with home button correctly sized and positioned

--- a/combined.scss
+++ b/combined.scss
@@ -7,7 +7,7 @@ body{
     background-color: #fff;
     font-family: Lekton;
     font-weight: 400;
-    margin: 5px 0;
+    margin: 0;
     padding: 0;
 } 
 header{
@@ -26,9 +26,16 @@ h2{
     font-weight: 400;
 }
 main{ 
-    max-width: 1800px;
+    max-width: 1920px;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.info-me{
+    max-width: 50%;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
