--- a/nav.scss
+++ b/nav.scss
@@ -2,8 +2,7 @@
 #menu-toggle{
     display: block;
     position: relative;
-    top: 50px;
-    left:50px;
+    left: 38%;
     z-index: 1;
     -webkit-user-select: none;
     user-select: none;
@@ -15,12 +14,11 @@
         }
     }
     input{
+        margin: 0%;
         display: block;
-        width: 100%;
-        height: 30%;
+        width: 20%;
+        height: 90%;
         position: absolute;
-        top: -7px;
-        left: 5px;
         cursor: pointer;
         opacity: 0;
         z-index: 2;
@@ -28,19 +26,19 @@
     }
     img{
         display: block;
-        width: 33px;
-        height: 4px;
-        margin-bottom: 5px;
+        width: 15%;
         position: relative;
+        top: 10%;
         z-index: 1;
     }
     .nav-list{
         position: absolute;
-        width: 300px;
-        margin: -100px 0 0 -50px;
+        max-width: 600px;
         padding: 50px;
+        /*need to play around with this for positioning*/
+        margin: -100px 0 0 -50px;
         padding-top: 125px;
-        background-color: cadetblue;
+        background-color:#ffe5ad;
         list-style-type: none;
         -webkit-font-smoothing: antialiased;
         transform: translate(100%, 0);
@@ -52,4 +50,18 @@
     input:checked ~ul{
         transform: none;
     }
+}
+nav.nav{
+    display: flex;
+    width: 100%;
+}
+.home{
+    display: inline-block;
+    width: 50%;
+}
+img{
+    width: 40%;
+    padding-left: 2%;
+    position: relative;
+    z-index: 1;
 }
